Made some changes in API
